refactor puzzle display

--- a/sudoku.html
+++ b/sudoku.html
@@ -29,6 +29,7 @@
         <div id="game-controls">
                 <div class="control-btn" id="undoBtn">undo</div>
                 <div class="control-btn" id="hintBtn">hint</div>
+                <div class="control-btn" id="generateBtn">new</div>
                 <div class="control-btn" id="solveBtn">solve</div>
                 <audio id="controlSound" src="sounds/space.wav"></audio>
         </div>
