add strike limit and adjust sounds

--- a/sudoku.html
+++ b/sudoku.html
@@ -16,8 +16,9 @@
         <div id="sudoku-container"> 
             <div id="sudoku-board">
                 <!-- 81 sudoku cells built here -->
-                <audio id="dingSound" src="sounds/ding.wav"></audio>
-                <audio id="oopsSound" src="sounds/oops.wav"></audio>
+                <audio id="validSound" src="sounds/ding.wav"></audio>
+                <audio id="invalidSound" src="sounds/oops.wav"></audio>
+                <audio id="noMoveSound" src="sounds/click2.wav"></audio>
             </div>
         </div>
        
