add difficulty div class and IDs

--- a/sudoku.html
+++ b/sudoku.html
@@ -12,8 +12,14 @@
         <hr/>
         <h2 id="strikes">0</h2>
 
+        <div class="difficulty-container">
+            <div class="difficulty-btn" id="easy">easy</div>
+            <div class="difficulty-btn" id="medium">medium</div>
+            <div class="difficulty-btn" id="hard">hard</div>
+        </div>
+
         <!-- sudoku board 9x9 -->
-        <div id="sudoku-container"> 
+        <div class="sudoku-container"> 
             <div id="sudoku-board">
                 <!-- 81 sudoku cells built here -->
                 <audio id="validSound" src="sounds/ding.wav"></audio>
