add difficulty btn styling

--- a/sudoku.html
+++ b/sudoku.html
@@ -29,7 +29,7 @@
         <!-- row of 1-9 built below -->
         <div id="nums"></div>
 
-        <div id="game-controls">
+        <div class="game-controls">
             <div class="control-btn" id="undoBtn">undo</div>
             <div class="control-btn" id="hintBtn">hint</div>
             <div class="control-btn" id="generateBtn">new</div>
